# Misty-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  PCH.hxx  README.md
include/: Components.h  Config.h  ConfigManager.h  Engine.h  Entity.h  MeshComponent.h  PCH.h  RenderSystem.h  Scene.h  ShaderConfig.h  ShaderManager.h  TagComponent.h  TransformComponent.h  WindowConfig.h  WindowManager.h
include/Misty/Core/: ClockModule.h  Components.h  ControlsModule.h  Engine.h  InputModule.h  RenderModule.h  RendererModule.h  TimeModule.h  Utils.h
include/Misty/Utils/: Macros.h  Mediator.h  Singleton.h
include/entt/: entt.hpp
lib/glm/cmake/glm/: glmConfig.cmake
resources/shaders/: shader.frag  shader.vert
src/: Engine.cpp  RenderSystem.cpp  Scene.cpp  ShaderConfig.cpp  ShaderManager.cpp  WindowConfig.cpp  WindowManager.cpp  main.cpp
src/Core/: ClockModule.cpp  ControlsModule.cpp  Engine.cpp  InputModule.cpp  RenderModule.cpp  RendererModule.cpp  TimeModule.cpp
